Fix" Atoms/Layout/Collapse fix initial state of the collapse

--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -44,7 +44,6 @@
   }
 
   .collapse-body {
-    position: inherit;
     overflow: hidden;
   }
 
